# course-schedule

./: Cargo.toml  README.md  agenda  index.html
css/: styles.css
data/: schedule.json
js/: main.js
src/: main.rs
